Closed Bug 1342841 Opened 7 years ago Closed 7 years ago

Lao script rendering issue; vowel misplacement

Categories

(Core :: Graphics: Text, defect)

52 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla54
Tracking Status
firefox51 --- unaffected
firefox52 --- wontfix
firefox-esr52 53+ verified
firefox53 --- verified
firefox54 --- verified

People

(Reporter: ananuti, Assigned: jfkthame)

References

()

Details

(Keywords: regression)

Attachments

(3 files, 1 obsolete file)

The first bad revision is 
o  changeset:   363618:ff080d7f8628
|  parent:      363615:2a0ce9941af5
~  user:        Ryan VanderMeulen <ryanvm@gmail.com>
   date:        Fri Jan 06 09:46:21 2017 -0500
   description:
   Bug 1325775 - Update harfbuzz to version 1.4.1. r=jfkthame
Flags: needinfo?(jfkthame)
Attached image Actual result
Attached image Expected result
I'm guessing this is font-dependent. What font is being used there? (It looks OK to me on my Nightly, which uses Phetsarat OT for the Lao text.)
Flags: needinfo?(jfkthame) → needinfo?(ananuti)
Fonts inspector show as "Arial Unicode MS".
Flags: needinfo?(ananuti)
Ah... sounds like this may be similar to the Telugu issue in bug 1342787.

Does it make a difference if you install the additional fonts Windows offers? (I'm assuming you're on Win10, this may be different on other versions.)
  Control Panel > All Control Panel Items > Fonts > Download fonts for all languages
(In reply to Jonathan Kew (:jfkthame) from comment #5)
> Ah... sounds like this may be similar to the Telugu issue in bug 1342787.
> 
> Does it make a difference if you install the additional fonts Windows
> offers? (I'm assuming you're on Win10, this may be different on other
> versions.)
>   Control Panel > All Control Panel Items > Fonts > Download fonts for all
> languages

Yes I'm on Win10.

Wow it looks good after installed Lao supplemental Fonts. 

Chrome and Edge use Leelawadee UI for Lao text. why Firefox end up with "Arial Unicode MS"?
> why Firefox end up with
> "Arial Unicode MS"?

Ah, I see bug 1342787 comment 6.
It turns out that although Leelawadi is described as a Thai font, it supports several other SEAsian scripts as well, so we should add it to the fallbacks here to try and avoid ending up with (broken) Arial Unicode MS.
Attachment #8841586 - Flags: review?(m_kato)
Attachment #8841586 - Attachment is obsolete: true
Attachment #8841586 - Flags: review?(m_kato)
Attachment #8841589 - Flags: review?(m_kato) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/6168ec4ebde4b44d2b2f4798ba493e0661e0e392
Bug 1342841 - Use Leelawadi UI as fallback for more scripts than just Thai, as it has additional character support. r=m_kato
https://hg.mozilla.org/mozilla-central/rev/6168ec4ebde4
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Probably too late for 52 at this point since we're already spinning RC builds, but it sounds like something we'll want to get to Aurora at least?
Assignee: nobody → jfkthame
Flags: needinfo?(jfkthame)
Version: Trunk → 52 Branch
Comment on attachment 8841589 [details] [diff] [review]
Use Leelawadi UI as fallback for more scripts than just Thai, as it has additional character support

Approval Request Comment
[Feature/Bug causing the regression]: harfbuzz update in bug 1325775 (gives poor rendering for complex scripts if font fallback chooses Arial Unicode MS)

[User impact if declined]: bad rendering of Lao script for some users, depending on installed fonts

[Is this code covered by automated tests?]: no, too dependent on installed fonts

[Has the fix been verified in Nightly?]: not yet, just landed

[Needs manual test from QE? If yes, steps to reproduce]: see URL field, and compare "expected" vs "actual result" screenshots

[List of other uplifts needed for the feature/fix]: none

[Is the change risky?]: no

[Why is the change risky/not risky?]: just adds a preferred fallback font name

[String changes made/needed]: none
Flags: needinfo?(jfkthame)
Attachment #8841589 - Flags: approval-mozilla-aurora?
Verified in nightly 20170301030202.
Status: RESOLVED → VERIFIED
Comment on attachment 8841589 [details] [diff] [review]
Use Leelawadi UI as fallback for more scripts than just Thai, as it has additional character support

Fix a Lao script rendering issue and was verified. Aurora53+.
Attachment #8841589 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
verified in aurora 20170303004003.
Comment on attachment 8841589 [details] [diff] [review]
Use Leelawadi UI as fallback for more scripts than just Thai, as it has additional character support

See comment 13. Low-risk fix that fixes font rendering for users in some regions.
Attachment #8841589 - Flags: approval-mozilla-esr52?
Comment on attachment 8841589 [details] [diff] [review]
Use Leelawadi UI as fallback for more scripts than just Thai, as it has additional character support

font fallback fix, verified in 53/54, esr52+ for 52.1.0esr
Attachment #8841589 - Flags: approval-mozilla-esr52? → approval-mozilla-esr52+
(In reply to Julien Cristau [:jcristau] from comment #19)
> esr52+ for 52.1.0esr


52.0.1esr: verify-
font being used as "Arial Unicode MS".

52.0.2esr, mozilla-esr52 changeset eb823e368d71 : verify+ 
font being used as "Leelawadi UI".
(yup, i don't want to wait till 52.1.0esr released on June 13, 2017. hence verifying against tinderbox-build.)
You need to log in before you can comment on or make changes to this bug.