Bug 1342841 - Use Leelawadi UI as fallback for more scripts than just Thai, as it has additional character support. r=m_kato